Corrected overflow in footer with adjusing bg size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,7 @@ main {
 }
 
 #budapest {
-    height: 95vh;
+    height: 100vh;
     width: 100%;
     background: url("./images/pexels-attila-pergel-11096565.jpg") no-repeat center center/cover;
     background-color: rgba(85, 214, 170, .85);
@@ -132,7 +132,7 @@ main {
 }
 
 footer {
-    background-color: rgba(85, 214, 170, 0.85); 
+    background-color: rgba(85, 214, 170, 0.85);
 }
 
 #social-media {
@@ -186,4 +186,4 @@ footer {
         justify-content: space-evenly;
         align-items: last baseline;
         }
-}
+    }
